tests/sksl/errors/InlineDivideByZero.glsl

uniform float unknownInput;
void main() {
    0 / 0;

    (ivec4(0) / 0).x;

    int(unknownInput) / 0;

}
